--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,12 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
     "corpus = []\n",
+    "for d in docs:\n",
+    "    archivo =open(d,\"r\")\n",
+    "    corpus.append(archivo.read().lower().replace('.',''))\n",
     "\n",
+    "print(corpus)\n",
+    "    \n",
     "# Write your code here\n"
    ]
   },
@@ -106,9 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -152,11 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bag_of_words = []"
+    "bag_of_words = []\n"
    ]
   },
   {
@@ -172,11 +194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['love', 'is', 'a', 'i', 'at', 'student', 'cool', 'am', 'ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "letras=[]\n",
+    "for c in corpus:\n",
+    "    letras+=re.findall('\\w*\\S',c)\n",
+    "bag_of_words=list(set(letras))\n",
+    "print(bag_of_words)"
    ]
   },
   {
@@ -192,9 +227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['love', 'is', 'a', 'i', 'at', 'student', 'cool', 'am', 'ironhack']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,13 +251,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 0, 0, 0, 0, 1, 0, 1], [1, 0, 0, 1, 0, 0, 0, 0, 1], [0, 0, 1, 1, 1, 1, 0, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "term_freq = []\n",
-    "\n",
-    "# Write your code here"
+    "count=0\n",
+    "x=[]\n",
+    "# Write your code here\n",
+    "for c in corpus:\n",
+    "    for word in bag_of_words:\n",
+    "        c=c+' '\n",
+    "        x.append(len(re.findall((word +'\\s+'),c)))\n",
+    "    term_freq.append(x)\n",
+    "    x=[]\n",
+    "print(term_freq)            "
    ]
   },
   {
@@ -228,9 +287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 0, 0, 0, 0, 1, 0, 1], [1, 0, 0, 1, 0, 0, 0, 0, 1], [0, 0, 1, 1, 1, 1, 0, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -278,12 +345,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1, 1], [0, 1, 0, 1], [1, 0, 0, 1]]\n",
+      "['student', 'love', 'cool', 'ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
+    "bag_of_words = ['love', 'is', 'a', 'i', 'at', 'student', 'cool', 'am', 'ironhack']\n",
+    "stop_words = ['all', 'six', 'less', 'being', \n",
+    "              'indeed', 'over', 'move', 'anyway', \n",
+    "              'fifty', 'four', 'not', 'own', 'through', 'yourselves',\n",
+    "              'go', 'where', 'mill', 'only', 'find', 'before', 'one', \n",
+    "              'whose', 'system', 'how', 'somewhere', 'with', 'thick', \n",
+    "              'show', 'had', 'enough', 'should', 'to', 'must', 'whom', \n",
+    "              'seeming', 'under', 'ours', 'has', 'might', 'thereafter', \n",
+    "              'latterly', 'do', 'them', 'his', 'around', 'than', 'get', \n",
+    "              'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', \n",
+    "              'front', 'during', 'thus', 'now', 'him', 'nor', 'name', \n",
+    "              'several', 'hereafter', 'always', 'who', 'cry', 'whither',\n",
+    "              'this', 'someone', 'either', 'each', 'become', 'thereupon',\n",
+    "              'sometime', 'side', 'two', 'therein', 'twelve', 'because', \n",
+    "              'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely',\n",
+    "              'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', \n",
+    "              'out', 'even', 'will', 'what', 'still', 'for', 'bottom',\n",
+    "              'mine', 'since', 'please', 'forty', 'per', 'its', \n",
+    "              'everything', 'behind', 'un', 'above', 'between', \n",
+    "              'it', 'neither', 'seemed', 'ever', 'across', 'she', \n",
+    "              'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', \n",
+    "              'here', 'otherwise', 'were', 'whereupon', 'nowhere', \n",
+    "              'although', 'found', 'alone', 're', 'along', 'fifteen',\n",
+    "              'by', 'both', 'about', 'last', 'would', 'anything', 'via', \n",
+    "              'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount',\n",
+    "              'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', \n",
+    "              'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while',\n",
+    "              'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least',\n",
+    "              'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', \n",
+    "              'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', \n",
+    "              'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', \n",
+    "              'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere',\n",
+    "              'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', \n",
+    "              'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', \n",
+    "              'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', \n",
+    "              'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby',\n",
+    "              'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', \n",
+    "              'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', \n",
+    "              'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', \n",
+    "              'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', \n",
+    "              'so', 'five', 'the', 'first', 'whereas', 'once']\n",
     "\n",
+    "bag_of_words2=list(set(bag_of_words).difference(set(stop_words)))\n",
+    "term_freq2 = []\n",
+    "count=0\n",
+    "x=[]\n",
+    "# Write your code here\n",
+    "for c in corpus:\n",
+    "    for word in bag_of_words2:\n",
+    "        x.append(len(re.findall(word,c)))\n",
+    "    term_freq2.append(x)\n",
+    "    x=[]\n",
+    "print(term_freq2)   \n",
+    "print(bag_of_words2)\n",
     "# Write your code below\n"
    ]
   },
@@ -333,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
