Segundo intento incluye challenge 2

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,11 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']"
+    "\n",
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n"
    ]
   },
   {
@@ -88,11 +89,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool ', 'i love ironhack ', 'i am a student at ironhack ']\n",
+      "[['ironhack ', 'is ', 'cool '], ['i ', 'love ', 'ironhack '], ['i ', 'am ', 'a ', 'student ', 'at ', 'ironhack ']]\n",
+      "[['ironhack', 'is', 'cool'], ['i', 'love', 'ironhack'], ['i', 'am', 'a', 'student', 'at', 'ironhack']]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
     "corpus = []\n",
+    "for e in docs:\n",
+    "    arch=open(e,\"r\")\n",
+    "    corpus.append(arch.read().lower().replace(\".\",\" \"))\n",
+    "print(corpus)    \n",
+    "\n",
+    "v=[list(re.findall(\"\\w* \",i)) for i in corpus]\n",
+    "print(v)\n",
+    "\n",
+    "result = [''.join(sub).split() for sub in v]\n",
+    "print(result)\n",
+    "\n",
+    "  \n",
     "\n",
     "# Write your code here\n"
    ]
@@ -106,9 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool ', 'i love ironhack ', 'i am a student at ironhack ']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -152,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bag_of_words = []"
+    "bag_of_words = []\n"
    ]
   },
   {
@@ -172,11 +205,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ironhack is cool i love ironhack i am a student at ironhack \n",
+      "['ironhack ', 'is ', 'cool ', 'i ', 'love ', 'ironhack ', 'i ', 'am ', 'a ', 'student ', 'at ', 'ironhack ']\n",
+      "['ironhack', 'is', 'cool', 'i', 'love', 'ironhack', 'i', 'am', 'a', 'student', 'at', 'ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "a=\"\".join(corpus)\n",
+    "print(a)\n",
+    "b=re.findall(\"\\w*\\s\", a)\n",
+    "print(b)\n",
+    "c=[]\n",
+    "for i in b:\n",
+    "    i=i[:-1]\n",
+    "    c.append(i)\n",
+    "print(c)\n",
+    "for i in c:\n",
+    "    if i not in bag_of_words:\n",
+    "        bag_of_words.append(i)\n"
    ]
   },
   {
@@ -192,9 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,12 +271,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-106-32f139ff795c>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-106-32f139ff795c>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    for int(e) in range(len(result[i])):\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+     ]
+    }
+   ],
    "source": [
     "term_freq = []\n",
     "\n",
+    "v=[list(re.findall(\"\\w* \",i)) for i in corpus]\n",
+    "print(v)\n",
+    "\n",
+    "result = [''.join(sub).split() for sub in v]\n",
+    "print(result)\n",
+    "\n",
+    "for i in result:\n",
+    "    for e in range(len(result[i])):\n",
+    "        if result[i][e] in bag_of_words:\n",
+    "            term_freq.append(1)\n",
+    "        else:\n",
+    "            term_freq_append(0)\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "for i in bag_of_words:\n",
+    "    for e in result:\n",
+    "        for x in e:\n",
+    "            if x in bag_of_words:\n",
+    "                term_freq.append(1)\n",
+    "            else:\n",
+    "                term_freq.append(0)\n",
     "# Write your code here"
    ]
   },
@@ -228,9 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -333,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
