No he tocado aún el segundo de Challenge 2 - Splitting Strings

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "\n",
+    "s = \"{}.\".format(\" \".join(str_list))\n",
+    "print(s)\n"
    ]
   },
   {
@@ -50,12 +62,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "\n",
+    "# food_b -> lista de prod que empiezan por b o B\n",
+    "\n",
+    "food_b = []\n",
+    "for e in food_list:\n",
+    "    if e.startswith(\"b\") or e.startswith(\"B\"):\n",
+    "        food_b.append(e)\n",
+    "        \n",
+    "# creas un string a partir de food_b que tenga como seperador ', '\n",
+    "\n",
+    "#gl = \"Grocery list: \" + \", \".join(food_b).lower() + \".\"\n",
+    "gl = \"{}: {}.\".format(\"Grocery list\", \", \".join(food_b).lower()) # \"Grocery list: \" + \", \".join(food_b).lower() + \".\"\n",
+    "\n",
+    "print(gl)\n",
+    "\n",
+    "# Añaidr punto y minúsculas\n",
+    "\n",
+    "\n",
+    "\n",
+    "# que empiece por 'Grocery list: '\n",
+    "\n",
+    "#f = (\" \".join(food_list))\n",
+    "#g = f.lower()\n",
+    "#grocery = []\n",
+    "#for e in g.split(\" \"):\n",
+    "#    if e.startswith(\"b\"):\n",
+    "#        grocery.append(e)\n",
+    "#    if e.startswith(\"b\") and e != \"bananas\":\n",
+    "#        e.replace(\"b\", \", b\")\n",
+    "#Grocery_list = [\"Grocery list:\"]\n",
+    "#Grocery_list.extend(grocery)\n",
+    "#Grocery_list[3] = \"brownie mix\"\n",
+    "#\" \".join(Grocery_list)\n",
+    "\n"
    ]
   },
   {
@@ -69,9 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -87,10 +148,10 @@
     "    # Sample input: 5.0\n",
     "    # Sample Output: 78.53981633\n",
     "    \n",
-    "    # Your code here:\n",
-    "    \n",
-    "    \n",
-    "# Your output string here:"
+    "    return pi*x**2\n",
+    "\n",
+    "print(f\"The area of the circle with radius: {radius} is: {area(radius)}\")\n",
+    "    \n"
    ]
   },
   {
@@ -106,9 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +189,22 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "def limpieza(palabra):\n",
+    "    return palabra.replace(\",\",\"\").replace(\".\",\"\").replace(\"\\n\",\"\")\n",
+    "\n",
+    "words = poem.split()\n",
+    "\n",
+    "dict = {}\n",
+    "\n",
+    "for word in words:\n",
+    "    cleanword = limpieza(word)\n",
+    "    if cleanword != \"\":\n",
+    "        if cleanword not in dict:\n",
+    "            dict[cleanword] = 1\n",
+    "        else:\n",
+    "            dict[cleanword] +=1\n",
+    "\n",
+    "print(dict)\n"
    ]
   },
   {
@@ -172,14 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TP'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "\"\".join(re.findall(\"[A-Z]\", poem))\n"
    ]
   },
   {
@@ -191,13 +286,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "numdata = []\n",
+    "\n",
+    "for e in data:\n",
+    "    x = re.search(\"\\d\", e)\n",
+    "    if x is not None:\n",
+    "        numdata.append(e)\n",
+    "print(numdata)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -213,13 +325,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
+    "\n",
+    "numdata = []\n",
+    "\n",
+    "for e in data:\n",
+    "    x = re.search(\"\\d+[a-z]+|[a-z]+\\d\", e)\n",
+    "    if x is not None:\n",
+    "        numdata.append(e)\n",
+    "print(numdata)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -227,18 +361,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   }
  },
  "nbformat": 4,
