(pen)Ultima actualizacion

--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,12 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "corpus = []\n",
     "\n",
+    "for i in docs:\n",
+    "    f = open(i, \"r\")\n",
+    "    corpus.append(f.readlines()[0])\n",
+    "print (corpus)\n",
     "# Write your code here\n"
    ]
   },
@@ -136,11 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "a = ([i.lower().replace(\".\",\"\")for i in corpus])"
    ]
   },
   {
@@ -152,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "b = ' '.join(a).split()\n",
+    "for i in b:\n",
+    "    if not i in bag_of_words:\n",
+    "        bag_of_words.append(i)\n"
    ]
   },
   {
@@ -192,9 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bag_of_words)"
    ]
@@ -208,12 +231,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at', 'ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at', 'ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
     "term_freq = []\n",
-    "\n",
+    "for i in range(len(corpus)):\n",
+    "    x= 0\n",
+    "    for e in bag_of_words:\n",
+    "        if e in bag_of_words:\n",
+    "            term_freq.append(e)\n",
+    "            \n",
+    "print (term_freq)\n",
     "# Write your code here"
    ]
   },
@@ -333,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
