Incluyendo función Remove_blacklist

--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -200,13 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n",
       "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
      ]
     }
@@ -247,7 +248,19 @@
     "print(blackwords)\n",
     "\n",
     "\n",
-    "#Cuando acabe los labs, definir funcion Remove_blacklist, que ejecute este comando.\n"
+    "#Cuando acabe los labs, definir funcion Remove_blacklist, que ejecute este comando.\n",
+    "import re\n",
+    "def remove_blacklist(n):\n",
+    "    d= (re.sub('[^A-Za-z0-9]', ' ', n)).strip()\n",
+    "    d= ' '.join([e for e in d.split(' ') if e != ''])\n",
+    "    blackwords=[]\n",
+    "    for i in d.split(' '):\n",
+    "        i=i.lower()\n",
+    "        if i not in blacklist:\n",
+    "            blackwords.append(i)\n",
+    "    return blackwords\n",
+    "    \n",
+    "print(remove_blacklist(poem))"
    ]
   },
   {
